# autoresearch-mlx-mem

./: README.md  RUNBOOK.md  adapt_locomo.py  gepa_reasoning_adapter.py  gepa_reasoning_v1.py  leakage_red_team.py  locomo_breakdown.py  locomo_eval.py  locomo_mode_adapter.py  locomo_multihop_policy.py  locomo_reasoning_eval.py  locomo_temporal_policy.py  prepare.py  program.md  pyproject.toml  reasoning_layer.py  reasoning_layer_prompts.py  reasoning_layer_schema.py  results.tsv  run_variant.py  train.py
gepa_runs/: ledger.tsv
gepa_runs/20260317-171352/: best_candidate.json  best_summary.json  current_specificity_tune.json  multihop_balance_tune.json  reflective_dataset.json  report.md  temporal_recall_tune.json
gepa_runs/20260317-183656/: best_summary.json  gepa_result.json  report.md  seed_reflective_dataset.json
gepa_runs/20260317-191051/: best_summary.json  gepa_result.json  report.md  run_config.json
gepa_runs/20260317-191147/: gepa_result.json  report.md  run_config.json  seed_reflective_dataset.json
gepa_runs/20260317-191217/: gepa_result.json  report.md  run_config.json
gepa_runs/20260317-193436/: gepa_result.json  report.md  run_config.json
gepa_runs/20260317-200604/: best_summary.json  gepa_result.json  report.md  run_config.json  seed_holdout_summary.json  seed_reflective_dataset.json
gepa_runs/20260317-200630/: best_holdout_summary.json  best_summary.json  gepa_result.json  report.md  run_config.json  seed_reflective_dataset.json
locomo_adapted/: breakdown.json  breakdown.md  events.jsonl  headers.jsonl  metadata.json  queries.jsonl
(+134 files in other folders)
