[project]
name = "autoresearch-mlx"
version = "0.1.0"
description = "Apple Silicon MLX autoresearch-style repo with a frozen UCMD V3.6 memory baseline"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "gepa==0.1.1",
    "litellm>=1.64.0,<2",
    "mlx>=0.30.0",
    "numpy>=2.2.6",
    "pyarrow>=21.0.0",
    "regex>=2025.7.34",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
]
